src/main/java/TaskGeneration/Analyseur.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{ static = false;
 IGNORE_CASE = true;}PARSER_BEGIN(Analyseur)package TaskGeneration;

import Tasks.*;

public class Analyseur{
private  int idCounter = 0;

}PARSER_END(Analyseur)SKIP :
{
  " "
| "\r"
| "\t"
| "\n"


}


TOKEN : /* OPERATORS */
{
  < operateur : "+" |"-"|"*"| "/"|"<"|">"|"=" >
| < fonction: "min"|"max"|"mean" > 
| < sym : "." |";"|"\"">
| < parenthO:"(" >
| < parenthF: ")" >
| < virgule:"," >
| < separateur:":" | "%" >
| < grammarkeyWords :"Rythme de collecte"|"type"|"params"|"service"|"loop"|"id"|"metriName"|"url">
| < accoladO: "{" >
| < accoladF: "}" >
| < RTT:"RTT">
| < url:("http" | "https")(<alpha>|<DIGIT>|< separateur>|<operateur>|<sym>|<accoladO>|<accoladF>|<sym>)+>
| <periodic : "periodic" >
| < stochastic :"stochastic" >
|< time_serie: "time-serie">
| <createM :"CreateMonitor" >
| <updateM: "UpdateMonitor" >
| <createN : "CreateNotifier" >
| < loi : "uniform"| "exponential" >
| < Metric : "NbReqSent" |"NbRespSent" | "NBTopicSubscription"| "NbPublishedMsg"|"NbMsgLost" >
| < timeUnit:"us"|"ms"|"s"|"min"|"h"|"jr" >

}

TOKEN :
{
  < number : (< DIGIT >)+(<sym>(<DIGIT>)+)? >
| < #DIGIT : [ "0"-"9" ] >
| < alpha :(["a"-"z", "A"-"Z"]) >
}

TOKEN :
{
 < AppName : <grammarkeyWords><number>>
| < MetricName: (<alpha>)+(<number>)? >

| <Id:((<alpha>|<DIGIT>)+<sym>)+<Metric>>
| <Idms:((<alpha>|<DIGIT>)+<sym>)+ (<alpha>|<DIGIT>)+>
}
void start () : {} { CreateMonitoringResource()|UpdateMonitoringResource()|CreateNotifierResource() |ReadMonitoringResource() }


UpdateMonitor UpdateMonitoringResource(): {
  UpdateMonitor task = new UpdateMonitor();
  Token tok1=null;
  Token tok2=null;}
   {(
<updateM>tok1=<MetricName> {task.setMetricName(tok1.toString());}
< separateur >
<grammarkeyWords><operateur><grammarkeyWords> 
(tok1=<periodic>{task.createRate(tok1.toString());}<grammarkeyWords><accoladO>tok2=<number> { task.getRate().getParameters().add(tok2.toString());}tok2=<timeUnit> { task.getRate().getParameters().add(tok2.toString());}<accoladF>
|tok1=<stochastic>{task.createRate(tok1.toString());}
<grammarkeyWords><accoladO>tok2=<loi > { ((StochasticRate)(task.getRate())).setLoi( tok2.toString());}(tok2=<number> { task.getRate().getParameters().add(tok2.toString());}tok2=<timeUnit> { task.getRate().getParameters().add(tok2.toString());})+<accoladF>
|tok1=<time_serie>{task.createRate(tok1.toString());}
<grammarkeyWords><accoladO>(tok2=<number> { task.getRate().getParameters().add(tok2.toString());}tok2=<timeUnit> { task.getRate().getParameters().add(tok2.toString());})+(<grammarkeyWords>)?<accoladF>)
)
{return task;}}

 
   


CreateNotifier CreateNotifierResource():{
Token tok1= null;
CreateNotifier task = new CreateNotifier();} {
(  
<createN>{task.setId("notifier"+idCounter); idCounter++;}<operateur>tok1=<MetricName> {task.getExpression().add(tok1.toString());task.getMetrics().add(tok1.toString());}
(tok1=<operateur> { task.getExpression().add(tok1.toString());}(tok1=<number> { task.getExpression().add(tok1.toString());}|tok1=<MetricName> {task.getExpression().add(tok1.toString());task.getMetrics().add(tok1.toString());} ))+
 <grammarkeyWords>tok1=<url> { task.setUrl(tok1.toString());} 
)
 {return task; } }


// we can read the value of admin metric(global metric) or internal metric ,
// a get operation on internal metric enables it if it was disabled.
ReadMonitor ReadMonitoringResource():{
Token tok1= null;
String rtt="";
ReadMonitor task = new ReadMonitor();} {(
 tok1=<MetricName> {task.setMetricName(tok1.toString());}|
 tok1=<RTT> {rtt=rtt+tok1.toString();task.setInternalMetricType("rtt");}tok1=<separateur>{rtt=rtt+tok1.toString();}tok1=<Idms>
{rtt=rtt+tok1.toString();}tok1=<separateur>{rtt=rtt+tok1.toString();}tok1=<Idms>{rtt=rtt+tok1.toString();task.setRttInternalMetric(rtt);task.setInternalMetric(true);}|
tok1=<Id>{task.setInternalMetricType("counter");task.setInternalMetricUniqueIdentifier(tok1.toString());task.setInternalMetric(true);}
)
 
 {return task; } }
   

CreateMonitor CreateMonitoringResource(): {
  Token tok1 =null;
  Token tok2 =null;
  CreateMonitor task= new CreateMonitor();
  Counter counter = new Counter();
  RTT rtt= new RTT();}
  {
    (       <createM><grammarkeyWords>tok1=<MetricName> {

          

         task.getAdminmetric().setMetricName(tok1.toString()); task.setId(tok1.toString());}
    <operateur>

    ((tok1=<number> {task.getExpression().add(tok1.toString());}|(tok1=<Id> {counter.setIdMs(tok1.toString());
     task.getAdminmetric().setType("counter");
     task.getExpression().add(counter.getIdMs()+"."+counter.getMetricName()); task.getAdminmetric().getMetrics().add(counter);})
    (tok1=<operateur> {task.getExpression().add(tok1.toString());}(tok1=<number> {task.getExpression().add(tok1.toString());}
    |tok1=<Id>{Counter counter1 = new Counter(); counter1.setIdMs(tok1.toString()); 
     task.getExpression().add(counter1.getIdMs()+"."+counter1.getMetricName()); task.getAdminmetric().getMetrics().add(counter1);}))*)
    |
 
(
(tok1=<fonction>{task.getExpression().add(tok1.toString());}tok1=<parenthO>{System.out.println(tok1.toString());task.getExpression().add(tok1.toString());})?
((tok1=<fonction>{task.getExpression().add(tok1.toString());} tok1=<parenthO>{task.getExpression().add(tok1.toString());})?
((tok1=<number>{task.getExpression().add(tok1.toString());}|(<RTT><separateur>tok1=<Idms> {System.out.println(tok1.toString());rtt.setIDusSource(tok1.toString()); (task.getAdminmetric()).setType("rtt");}<separateur>tok1=<Idms>
{System.out.println(tok1.toString());rtt.setIDusDestination(tok1.toString());} {(task.getExpression()).add(rtt.toString());}{((task.getAdminmetric()).getMetrics()).add(rtt);}))
(tok1=<operateur>{System.out.println(tok1.toString());task.getExpression().add(tok1.toString());} (tok1=<number>{task.getExpression().add(tok1.toString());}|
(<RTT><separateur>tok1=<Idms> {System.out.println(tok1.toString());RTT rtt1 =new RTT(); rtt1.setIDusSource(tok1.toString());}<separateur>tok1=<Idms>
{System.out.println(tok1.toString());rtt1.setIDusDestination(tok1.toString());} {task.getExpression().add(rtt1.toString());}{(task.getAdminmetric()).getMetrics().add(rtt1);})))*
(tok1=<virgule> {System.out.println(tok1.toString()); task.getExpression().add(tok1.toString());})?)+
(tok1=<parenthF>{System.out.println(tok1.toString());task.getExpression().add(tok1.toString());})?
(tok1=<virgule> {System.out.println(tok1.toString()); task.getExpression().add(tok1.toString());})?)+
(tok1=<parenthF>{System.out.println(tok1.toString());task.getExpression().add(tok1.toString());})?
(tok1=<operateur>{task.getExpression().add(tok1.toString());} (tok1=<number>{task.getExpression().add(tok1.toString());}|(
(tok1=<fonction>{task.getExpression().add(tok1.toString());})?(tok1=<parenthO>{task.getExpression().add(tok1.toString());})?
((tok1=<fonction>{task.getExpression().add(tok1.toString());})?(tok1=<parenthO>{task.getExpression().add(tok1.toString());})?
((tok1=<number>{task.getExpression().add(tok1.toString());}|(<RTT><separateur>tok1=<Idms> {RTT rtt2 = new RTT(); rtt2.setIDusSource(tok1.toString());}<separateur>tok1=<Idms>
{rtt2.setIDusDestination(tok1.toString());} {task.getExpression().add(rtt2.toString());}{task.getAdminmetric().getMetrics().add(rtt2);}))
(tok1=<operateur>{task.getExpression().add(tok1.toString());} (tok1=<number>{task.getExpression().add(tok1.toString());}|
(<RTT><separateur>tok1=<Idms> {RTT rtt3 =new RTT(); rtt3.setIDusSource(tok1.toString());}<separateur>tok1=<Idms>
{rtt3.setIDusDestination(tok1.toString());} {task.getExpression().add(rtt3.toString());}{task.getAdminmetric().getMetrics().add(rtt3);})))*)+
(tok1=<parenthF>{task.getExpression().add(tok1.toString());})?)+
(tok1=<virgule> {System.out.println(tok1.toString()); task.getExpression().add(tok1.toString());})?
(tok1=<parenthF>{task.getExpression().add(tok1.toString());})?))+
)*) 


    
    )<separateur>

     <grammarkeyWords><operateur><grammarkeyWords> 
    (tok1=<periodic>{task.createRate(tok1.toString());}<grammarkeyWords><accoladO>tok2=<number> { System.out.println(tok2.toString());task.getRate().getParameters().add(tok2.toString());}tok2=<timeUnit> { System.out.println(tok2.toString());task.getRate().getParameters().add(tok2.toString());}<accoladF>
|  tok1=<stochastic>{task.createRate(tok1.toString());}
<grammarkeyWords><accoladO>tok2=<loi > { ((StochasticRate)(task.getRate())).setLoi( tok2.toString());}(tok2=<number> { task.getRate().getParameters().add(tok2.toString());}tok2=<timeUnit> { task.getRate().getParameters().add(tok2.toString());})+<accoladF>
| tok1=<time_serie>{task.createRate(tok1.toString());}
<grammarkeyWords><accoladO>(tok2=<number> { task.getRate().getParameters().add(tok2.toString());}tok2=<timeUnit> { task.getRate().getParameters().add(tok2.toString());})+(<grammarkeyWords>)?<accoladF>)
)
  
{return task;}

}


